--- a/TodoApp/TodoApp.csproj
+++ b/TodoApp/TodoApp.csproj
@@ -152,6 +152,7 @@
     <Content Include="Views\Todoes\Details.cshtml" />
     <Content Include="Views\Todoes\Edit.cshtml" />
     <Content Include="Views\Todoes\Index.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -161,7 +162,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Login\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
