--- a/TodoApp/Web.config
+++ b/TodoApp/Web.config
@@ -19,6 +19,24 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
+	 <!-- この場所にログイン認証設定を記述する -->
+	  <authentication mode="Forms">
+		  <forms loginUrl="~/Login/Index"></forms>
+	  </authentication>
+	  <!-- メンバーシッププロバイダークラスの設定(フルパスを指定) -->
+	  <membership defaultProvider="CustomMembershipProvider">
+		  <providers>
+			  <clear/>
+			  <add name="CustomMembershipProvider" type="TodoApp.Models.CustomMembershipProvider"/>
+		  </providers>
+	  </membership>
+	  <!-- ロールクラスも設定する -->
+	  <roleManager enabled="true" defaultProvider="CustomRoleProvider">
+		  <providers>
+			  <clear/>
+			  <add name="CustomRoleProvider" type="TodoApp.Models.CustomRoleProvider"/>
+		  </providers>
+	  </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
