--- a/TodoApp/TodoApp.csproj
+++ b/TodoApp/TodoApp.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Models\TodesContext.cs" />
     <Compile Include="Models\Todo.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserEditViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
